Redid quite a bit. Removed all CommandExe classes.